force-app/main/default/objects/Apttus_Config2__ProductAttributeMatrixView__c/Apttus_Config2__ProductAttributeMatrixView__c.object-meta.xml
<CustomObject>
    <description>Represents a denormalized (materialized) view of product attribute and matrices</description>
    <label>Product Attribute Matrix View</label>
    <nameField>
        <displayFormat>PAMV-{0000000000}</displayFormat>
        <label>View Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Attribute Matrix Views</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>