force-app/main/default/objects/Apttus_Config2__ProductAttributeMatrixView__c/fields/Apttus_Config2__AttributeValueMatrixId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__AttributeValueMatrixId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the associated attribute value matrix</description>
    <inlineHelpText>ID of the associated attribute value matrix</inlineHelpText>
    <label>Attribute Value Matrix</label>
    <referenceTo>Apttus_Config2__AttributeValueMatrix__c</referenceTo>
    <relationshipLabel>Product Attribute Matrix Views</relationshipLabel>
    <relationshipName>ProductAttributeMatrixViews</relationshipName>
    <type>Lookup</type>
</CustomField>