force-app/main/default/objects/Apttus_Config2__ProductAttributeMatrixView__c/fields/Apttus_Config2__Columns__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Columns__c</fullName>
    <description>The product attribute columns</description>
    <inlineHelpText>The product attribute columns</inlineHelpText>
    <label>Columns</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>