force-app/main/default/objects/Apttus_Config2__ProductAttributeMatrixView__c/fields/Apttus_Config2__Keys__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Keys__c</fullName>
    <description>The encoded column tokens.</description>
    <inlineHelpText>The encoded column tokens.</inlineHelpText>
    <label>Keys</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>