force-app/main/default/objects/Apttus_Config2__ProductAttributeMatrixView__c/fields/Apttus_Config2__ProductAttributeScope__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ProductAttributeScope__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the associated product attribute group</description>
    <inlineHelpText>ID of the associated product attribute group</inlineHelpText>
    <label>Product Attribute Scope</label>
    <referenceTo>Apttus_Config2__ProductAttributeGroup__c</referenceTo>
    <relationshipLabel>Product Attribute Matrix Views</relationshipLabel>
    <relationshipName>ProductAttributeMatrixViews</relationshipName>
    <type>Lookup</type>
</CustomField>