force-app/main/default/objects/Apttus_Config2__ProductAttributeMatrixView__c/fields/Apttus_Config2__ProductId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ProductId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Attribute Matrix Views</relationshipLabel>
    <relationshipName>ProductAttributeMatrixViews</relationshipName>
    <type>Lookup</type>
</CustomField>